--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,3 +1,8 @@
 :root {
-  --bg-main: lightblue;
+  --bg-main: rgb(250, 250, 250);
+  --bg-main-grey: #f6f6f6;
+
+  --font-color-grey: #524c4c;
+
+  --color-main-black: #070707;
 }
