--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,6 +1,6 @@
 :root {
   --bg-main: rgb(250, 250, 250);
-  --bg-main-grey: #f6f6f6;
+  --bg-main-grey: #ededed;
 
   --font-color-grey: #524c4c;
 
