--- a/styles/basic.css
+++ b/styles/basic.css
@@ -28,3 +28,13 @@ p {
   max-width: 970px;
   padding: 0 10px;
 }
+
+.divider {
+  background-color: var(--color-main-black);
+  /* max-width: 420px;
+  width: 100%; */
+  width: min(420px, 100%);
+  height: 1px;
+  border: none;
+  margin: 15px auto;
+}
